# BuyNoida_Casabricks

./: .env.backend.example  .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  README_BACKEND.md  alembic.ini  index.html  package-lock.json  package.json  pyproject.toml  pytest.ini  tailwind.config.js
.github/: copilot-instructions.md
alembic/: env.py
app/: main.py
app/api/: dependencies.py
app/api/v1/: router.py
app/config/: database.py  settings.py
app/core/: exceptions.py  logging.py  metrics.py  security.py  utils.py
app/infrastructure/ai/: ai_client.py
app/infrastructure/cache/: redis_client.py
app/infrastructure/storage/: supabase_storage.py
app/middleware/: error_handler.py  logging_middleware.py
app/models/: __init__.py  analytics.py  image.py  inquiry.py  property.py  user.py
app/repositories/: base.py  image_repo.py  inquiry_repo.py  property_repo.py
app/schemas/: auth.py  common.py  image.py  inquiry.py  property.py  search.py
app/services/: auth_service.py  image_service.py  inquiry_service.py  property_service.py  search_service.py
app/tasks/: celery_app.py  monitoring_tasks.py
app/tests/: conftest.py
backend/: .gitignore  README.md  pyproject.toml  server.py
backend/middleware/: README.md  auth.py  logging.py  rateLimiting.py
backend/services/: __init__.py  logger.py
docs/: LOGGING.md  srs.md
docs/frontend/: project.md
frontend/: index.html  package-lock.json  tailwind.config.js
frontend/src/: index.css
scripts/: create_admin.py  start.sh
src/: App.css  App.jsx  index.css
(+41 files in other folders)
